update staff management